fix: hidden y-overflow

--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .navbar-header {
